filter spacing fix

--- a/assets/css/scss/to-search.scss
+++ b/assets/css/scss/to-search.scss
@@ -679,7 +679,7 @@ body:not(.search-no-results) {
 				right: 18px;
 			}
 			.container-results {
-				flex-grow: 6;
+				flex-grow: 12;
 				+ .facetwp-sort {
 					flex-grow: 1;
 					right: 0;
